Fix form check on Tablet

--- a/src/view/css/main.css
+++ b/src/view/css/main.css
@@ -327,7 +327,12 @@ dl, ol, ul {
   .carousel-control-prev-icon {
     display: none;
   }
-
+    
+  .form-check-input {
+    margin-top: 0.5rem !important;
+    margin-left: -17.75rem !important;
+  }
+    
   .carousel-control-next {
     left: 150px;
   }
